crates/pg_syntax/tests/snapshots/postgres_regress/insert_conflict@206.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create table parted_conflict_test_3 partition of parted_conflict_test for values in (4);
---
CreateStmt@0..88
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..35
    Ident@13..35 "parted_conflict_test_3"
  Whitespace@35..36 " "
  Partition@36..45 "partition"
  Whitespace@45..46 " "
  Of@46..48 "of"
  Whitespace@48..49 " "
  RangeVar@49..69
    Ident@49..69 "parted_conflict_test"
  Whitespace@69..70 " "
  For@70..73 "for"
  Whitespace@73..74 " "
  Values@74..80 "values"
  Whitespace@80..81 " "
  PartitionBoundSpec@81..86
    InP@81..83 "in"
    Whitespace@83..84 " "
    Ascii40@84..85 "("
    AConst@85..86
      Iconst@85..86 "4"
  Ascii41@86..87 ")"
  Ascii59@87..88 ";"

