crates/pg_syntax/tests/snapshots/postgres_regress/insert_conflict@213.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: truncate parted_conflict_test;
---
TruncateStmt@0..30
  Truncate@0..8 "truncate"
  Whitespace@8..9 " "
  RangeVar@9..29
    Ident@9..29 "parted_conflict_test"
  Ascii59@29..30 ";"

