crates/pg_syntax/tests/snapshots/postgres_regress/insert_conflict@230.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create table parted_conflict_1_1 partition of parted_conflict_1 for values from (0) to (500);
---
CreateStmt@0..93
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..32
    Ident@13..32 "parted_conflict_1_1"
  Whitespace@32..33 " "
  Partition@33..42 "partition"
  Whitespace@42..43 " "
  Of@43..45 "of"
  Whitespace@45..46 " "
  RangeVar@46..63
    Ident@46..63 "parted_conflict_1"
  Whitespace@63..64 " "
  For@64..67 "for"
  Whitespace@67..68 " "
  Values@68..74 "values"
  Whitespace@74..75 " "
  PartitionBoundSpec@75..91
    From@75..79 "from"
    Whitespace@79..80 " "
    Ascii40@80..81 "("
    AConst@81..82
      Iconst@81..82 "0"
    Ascii41@82..83 ")"
    Whitespace@83..84 " "
    To@84..86 "to"
    Whitespace@86..87 " "
    Ascii40@87..88 "("
    AConst@88..91
      Iconst@88..91 "500"
  Ascii41@91..92 ")"
  Ascii59@92..93 ";"

