crates/pg_syntax/tests/snapshots/postgres_regress/insert_conflict@240.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create unique index on parted_conflict (a, b);"
---
IndexStmt@0..46
  Create@0..6 "create"
  Whitespace@6..7 " "
  Unique@7..13 "unique"
  Whitespace@13..14 " "
  Index@14..19 "index"
  Whitespace@19..20 " "
  On@20..22 "on"
  Whitespace@22..23 " "
  RangeVar@23..38
    Ident@23..38 "parted_conflict"
  Whitespace@38..39 " "
  Ascii40@39..40 "("
  IndexElem@40..41
    Ident@40..41 "a"
  Ascii44@41..42 ","
  Whitespace@42..43 " "
  IndexElem@43..44
    Ident@43..44 "b"
  Ascii41@44..45 ")"
  Ascii59@45..46 ";"

